# Agent-Trace-Privacy-Scrubber

./: .env.example  .gitignore  README.md  app.py  bench_a100_80_recheck.json  bench_modal.py  bench_modal_v2.py  bench_report.py  bench_results.json  bench_v2_l4a10_bs16.json  bench_v2_results.json  modal_app.py  pyproject.toml  requirements.txt
docs/: article.md  demo-video-script.md  social-post.md  submission-notes.md
sample_logs/claude/: fake-claude-session.jsonl
sample_logs/codex/: fake-codex-session.jsonl
sample_logs/pi/: fake-pi-session.jsonl
src/trace_scrubber/: __init__.py  discovery.py  jsonl_processor.py  modal_backend.py  redactors.py  reporting.py  zipper.py
tests/: test_caching_redactor.py  test_discovery_zip_reporting.py  test_jsonl_processor.py  test_modal_backend.py  test_redactors.py
