[project]
name = "agent-trace-privacy-scrubber"
version = "0.1.0"
description = "Agent trace privacy scrubber"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=6.0",
    "huggingface-hub>=0.30",
    "modal>=1.5.0",
    "openmed[hf]>=1.5.5",
    "pytest>=8.0",
    "spaces>=0.50.4",
    "torch>=2.0",
    "tqdm>=4.66",
    "transformers>=4.50",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
# app.py inserts src/ onto sys.path before importing the local package so it runs
# on a Hugging Face Space without the package being installed; its local imports
# intentionally sit below that module-level setup.
"app.py" = ["E402"]
